# NDKGifLoadDemo

app/: build.gradle
app/src/androidTest/java/com/yuong/ndkgifloaddemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gif.h  native-lib.cpp
app/src/main/java/com/yuong/ndkgifloaddemo/: GifHelper.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yuong/ndkgifloaddemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
